# c-cxx-code-coverage

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
cmake/: coverage.cmake
docker/: .bash_aliases  .bashrc  .profile  Dockerfile  Makefile
source/: CMakeLists.txt
source/app1/: CMakeLists.txt  main.c
source/app2/: CMakeLists.txt
source/app3/: CMakeLists.txt  main.c
source/app4/: CMakeLists.txt  main.cpp
source/libApp/: CMakeLists.txt  app.c  app.h
source/libCWapp/: CMakeLists.txt  app.c  app.h
source/libCWrapper/: CMakeLists.txt  wrapper.c  wrapper.h
source/libMock/: CMakeLists.txt  mock.c  mock.h
source/libSystem/: CMakeLists.txt  system.c  system.h
source/libWapp/: CMakeLists.txt  wapp.cpp  wapp.hpp
source/libWrapper/: CMakeLists.txt  wrapper.hpp  wrapper_impl.cpp  wrapper_impl.hpp
source/py3System/: CMakeLists.txt  app.py  main.py  module.cpp  test_app.py
tests/: CMakeLists.txt
tests/app2-test/: CMakeLists.txt  main.cpp
tests/app3-test/: CMakeLists.txt  main.cpp
tests/app4-test/: CMakeLists.txt  main.cpp
tests/vanilla-test/: CMakeLists.txt  main.cpp
