add_subdirectory(libSystem)
add_subdirectory(libMock)
add_subdirectory(libApp)
add_subdirectory(libWrapper)
add_subdirectory(libCWrapper)
add_subdirectory(libCWapp)
add_subdirectory(libWapp)
add_subdirectory(py3System)
add_subdirectory(app1)
add_subdirectory(app2)
add_subdirectory(app3)
add_subdirectory(app4)